# biograph

./: LICENSE  README.md  pyproject.toml  pytest.ini  schema.json
config/: .gitignore  logging.example.yml  logging_dev.example.yml  neo4j.example.yml  neo4jsbml.example.yml  uvicorn.example.yml  uvicorn_dev.example.yml
scripts/: run.py  run_dev.py
src/__tests__/: __init__.py  test_fastapi.py
src/biograph/: api_models.py  config.py  database.py  edges.py  graph.py  main.py  models.py  neo4jsbml.py  nodes.py  utils.py
src/biograph/routes/: merge.py  model.py  node.py  query.py  relationship.py  subgraph.py
tests/models/: BIOMD0000001077.xml  Hou2020.xml  Malkov2020.xml  Mukandavire2020.xml  Mwalili2020.xml  Paiva2020.xml  model_jakstat_pa.xml
ui/: README.md  bun.lockb  package.json  svelte.config.js  tailwind.config.ts
ui/src/: app.html
ui/src/routes/: +layout.svelte  +page.svelte  Navbar.svelte
ui/src/routes/vis/: +page.svelte  QueryBar.svelte
uml/: additional-sbml.plantuml  cliques.plantuml  gantt.plantuml  init.plantuml  merge.plantuml  search-by-id.plantuml  similar-models.plantuml  update-sbml.plantuml  visualise-database.plantuml  visualise-model.plantuml
