[project]
name = "biograph"
version = "0.1.0"
authors = [
    {name = "Andre Toerien", email = "andre.toerien8@gmail.com"},
    {name = "Ethan Wolff", email = "thesisyphean256@gmail.com"},
    {name = "Luke Eberhard", email = "luke.eberhard@gmail.com"},
]
dependencies = [
    "neo4j>=5.23.1",
    "neo4jsbml @ git+https://github.com/brsynth/neo4jsbml.git@1.0.1"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.resolution]
excludes = ["conda-build", "neo4j-python-driver"]
